Initial Heroku commit

--- a/src/app/frontpageComponents/app.component.html
+++ b/src/app/frontpageComponents/app.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="card-body">
     <h4 class="card-title">Check out the most notable Star Wars characters, movies and planets.</h4>
-    <p class="card-text">Created by Olcay Akdeniz - 0880603 with thanks to the SWAPI API - link <a href="https://swapi.co/">more about the API</a><br>      You can find the source code on my github page: <a href="https">for more information</a>
+    <p class="card-text">Created by Olcay Akdeniz - 0880603 with thanks to the SWAPI API - link <a href="https://swapi.co/">more about the API</a><br>      You can find the source code on my github page: <a href="https://github.com/Olcay4/fed01">for more information</a>
       <br><br> The API information is without pictures because the API didn't provide any pictures.</p>
     <button type="button" class="btn btn-outline-primary" [routerLink]="['/pc']">Check out the most notable heroes</button>
     <button type="button" class="btn btn-outline-success" [routerLink]="['/movies']">Check out all movies</button>
